--- a/mostrarclientes.html
+++ b/mostrarclientes.html
@@ -8,7 +8,7 @@
                 }
             </style>
         </head>
-        <body style="#142850">
+        <body>
             <div style="text-align: center">
                 
             </div>
