--- a/mostrarclientes.html
+++ b/mostrarclientes.html
@@ -5,11 +5,15 @@
             <style type="text/css">
                 body {
                     background-color: #142850;
+                    color: white;
+                }
+                div {
+                    text-align: center;   
                 }
             </style>
         </head>
         <body>
-            <div style="text-align: center">
-                
+            <div>
+                <h1>Mis Clientes</h1>
             </div>
         </body>
