--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>F en el xat</title>
-   </head>
-   <body>
-    <h1>Yepa que pasa gente,  tamo en directo aqui probando la nueva season de fortnite, pasaros un ratico</h1>
-   </body>
-</html>
+    <html>
+        <head>
+            <title>Mis Clientes</title>
+            <style type="text/css">
+                body {
+                    background-color: #142850;
+                    color: white;
+                }
+                div {
+                    text-align: center;   
+                }
+                table {
+                    margin: 0 auto;
+                    border-collapse: collapse;
+                }
+                tr:nth-of-type(even) {
+                    background-color: #27496d;
+                }
+                tr:nth-of-type(odd) {
+                    background-color: #0c7b93;
+                }
+            </style>
+        </head>
+        <body>
+            <div>
+                <h1>Mis Clientes</h1>
+                <table>
+                    <tr>
+                        <td>DNI</td>
+                        <td>Nombre</td>
+                        <td>Edad</td>
+                    </tr>
+                </table>
+            </div>
+        </body>
